DDD News						-*- text -*-
********

DDD 3.1.7
=========

DDD 3.1.7 fixes a number of minor bugs.

- Auto-raise of menus works much better (and is enabled by default).
- Value tips of strings containing ` = ' are displayed correctly.
- In file names, `//' is no longer normalized to `/'.
- [JDB] Thread names with dashes are handled correctly.
- [HP-UX] Renaming the `~/.ddd/init' file during saving options works.
- [Build] DDD checks whether -fpermissive is required for old X headers.

There are no new features in DDD 3.1.7.  You don't need to upgrade
unless you suffer from one of these problems.

DDD 3.1.6
=========

DDD 3.1.6 brings support for recent tools and components.

- DDD passes all options after `--' to the inferior debugger.
- [Build] DDD supports EGCS 1.1.2 as well as GCC 2.95 and later
- [Build] DDD supports LessTif 0.88.9 and later.

There are no new features in DDD 3.1.6.  You don't need to upgrade
unless you suffer from one of these problems.


DDD 3.1.5
=========

DDD 3.1.5 brings support for recent tools and components.

- [Linux] DDD supports TTYs on Linux with GNU libc 2.1.
- [Solaris] DDD supports Motif 2.1 on Sun Solaris 7.
- [XEmacs] DDD supports gud-mode in XEmacs 21.0.
- [Build] DDD supports Bison 1.27 and Automake 1.4a.

There are no new features in DDD 3.1.5.  You don't need to upgrade
unless you use one of the listed tools and/or components.


DDD 3.1.4
=========

DDD 3.1.4 brings improved LessTif support and fixes more minor
problems in DDD 3.1.

- Changing the GDB display radix automatically refreshes displayed values.
- Searching Java classes visits each file exactly once.
- [LessTif] LessTif 0.88 is supported.  See `PROBLEMS' for a discussion.
- [LessTif] Worked around X error when scrolling breakpoint glyphs.
- [Linux] Improved GNU libc 2.1 support (TTYs).
- [HP-UX] Improved aCC support.
- [Solaris] Improved Motif 2.1 support (Pixmaps).

There are no new features in DDD 3.1.4.  You don't need to upgrade